[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmisp-worker"
version = "0.1.0"
description = ""
authors = [{name = "Ahmad Baki"}, {name = "Tobias Gasteiger"}, {name = "Lukas Sewing"}, {name = "Christopher Worsch"}, {name = "Amadeus Haessler"}]
readme = "README.md"
requires-python = ">=3.11.0"


dependencies = [
    #"fastapi==0.104.1",
    #"pydantic==1.10.13",
    #"uvicorn==0.24.0.post1",
    "mmisp-lib==0.6.4",
    "celery",
    "email-validator",
    "fastapi",
    "jinja2",
    "mysql-connector-python",
    "publicsuffix2",
    "redis",
    "requests",
    "sqlalchemy",
    "uvicorn",
    "validators",
    "pydantic"
]


[project.optional-dependencies]
dev = [
  "faker",
  "ruff>=0.3.7",
  "mypy==1.10.0",
  "pre-commit==3.6.0",
  "pytest==8.0.0",
  "pytest-asyncio==0.21.2",
  "pytest-test-groups",
  "pytest-cov==4.1.0",
  "respx==0.20.2",
  "mysql-connector-python==8.3.0",
  "icecream",
  "celery-types",
  "types-requests",
]


[project.scripts]
mmisp-worker = "mmisp.worker.main:main"

[tool.setuptools.package-data]
'mmisp.worker.jobs.email.templates' = ['*.j2']

[tool.coverage.report]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
    ]

[tool.ruff]
fix = true
line-length = 120
required-version = ">=0.3.7"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ICN", "ANN"]
#select = ["ALL"]
ignore = ["ANN002", "ANN003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202"]

[tool.pylint.format]
max-line-length = 120

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.mypy]
plugins = ["pydantic.mypy"]
